First-pass at adding SV data to data-genome module